# tiktoken

./: README.md  pyproject.toml  setup.py
tiktoken/: core.py  python_tiktoken.py
